# aze-v2

./: .gitmodules  ACCOUNTING_SUMMARY.md  FINANCIAL.md  INVOICE_TEMPLATE.md  PAYMENT_INTEGRATION.md  PRICING_AND_LICENSE.md  README.md  TOTALITY_DEPLOYMENT_GUIDE.md  TOTALITY_MANIFEST_v1.0.0.json  VUA_API_COMPLETE.md  VUA_TOTALITY_COMPLETE_INVENTORY.md  vua-attestation-gen.py  vua-config-wizard.html  vua-core.py  vua-integration.sh  vua-manifest-validator.py  vua-state-monitor.html
Downloads/files (19)/: billing_workflow.md  datavalid_api.py  datavalid_requirements.txt  pyproject.toml  requirements.txt  sunbreak_openapi.yaml
Downloads/files (19)/deployments/: render.yaml
Downloads/files (19)/deployments/aws-sam/: template.yaml
Downloads/files (19)/deployments/digitalocean/: cloud-init.yml
Downloads/files (19)/evaluation/: README.md  evaluation_results.json  harness.py  queries.jsonl  responses.jsonl  runner.py
Downloads/files (19)/financials/: __init__.py  compute_financials.py  expenses.csv  generate_invoice_pdf.py  income.csv  invoices.csv  test_financials.py
Downloads/files (19)/financials/receipts/: ledger.csv  payment_receipts.csv
Downloads/files (19)/payments/: README.md  __init__.py  app.py  cancel.html  checkout.html  requirements.txt  success.html  test_payments.py
Downloads/files (19)/provider_costs/: AWS.md  DIGITALOCEAN.md  RENDER.md
Downloads/files (19)/sunbreak/: README.md  __init__.py  cli.py  keystore.py  signing.py
Downloads/files (19)/tests/: test_integration.py  test_sunbreak.py
veroti_project/: .gitignore  docker-compose.yml  (+1 more)
(+17 files in other folders)
