[tool.poetry]
name = "sunbreak"
version = "0.1.0"
description = "Reference SunBreak protocol helpers for DataValid"
authors = ["Axis Analytics <dev@datavalid-app.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
cryptography = "^46.0"
requests = "^2.31"
PyJWT = "^2.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
